// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-type-folder create should create a folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`document-type-folder create should create a folder with parent 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`document-type-folder delete should delete a folder 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`document-type-folder delete should handle non-existent folder 1`] = `
{
  "content": [
    {
      "text": "Error using delete-document-type-folder:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The folder could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`document-type-folder update should handle non-existent folder 1`] = `
{
  "content": [
    {
      "text": "Error using update-document-type-folder:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The folder could not be found",
    "status": 404,
    "operationStatus": "NotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`document-type-folder update should update a folder name 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
